# ton-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: tonconnect-manifest.json
tests/: test_account.py  test_cache.py  test_config.py  test_constants.py  test_models.py  test_sender.py  test_types.py  test_utils.py
ton_mcp/: __init__.py  __main__.py  constants.py  instructions.md  models.py  types.py
ton_mcp/core/: __init__.py  config.py  context.py  factory.py  lifespan.py  sender.py
ton_mcp/tools/: __init__.py
ton_mcp/tools/contract/: __init__.py  info.py
ton_mcp/tools/dns/: __init__.py  info.py  manage.py
ton_mcp/tools/jetton/: __init__.py  deploy.py  info.py  manage.py  mint.py
ton_mcp/tools/nft/: __init__.py  deploy.py  info.py  manage.py  mint.py
ton_mcp/tools/tonconnect/: __init__.py  manage.py
ton_mcp/tools/transfer/: __init__.py  batch.py  single.py
ton_mcp/tools/wallet/: __init__.py  info.py  manage.py
ton_mcp/utils/: __init__.py  account.py  cache.py  comment.py  content.py  getters.py  transaction.py  urls.py
